调整项目结构

--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <div id="app">
-    {{age}}
+    <div class="ageContent" v-if="isShow">
+      小明的年龄是{{age}}
+    </div>
+
   </div>
   
 </body>
