--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="app">
-    <div class="ageContent" v-if="isShow">
+    <div class="ageContent" v-if="isShow" v-fuck="233" :a="test">
       小明的年龄是{{age}}
     </div>
 
