[fix]数据更新重复数值无法正常更新的问题

--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -9,125 +9,10 @@
 <body>
   <div id="app">
     <div class="ageContent" v-if="isShow" v-fuck="233" :a="test">
-      小明的年龄是{{age}}
+      小明的1年龄是{{age}}
     </div>
 
   </div>
   
 </body>
-<script>
-  
-// class Subject {
-//   constructor () {
-//     this.subs = []
-//   }
-
-//   subscribe (watcher) {
-//     this.subs.push(watcher)
-//   }
-
-//   notify () {
-//     this.subs.forEach(watcher => watcher && watcher.update ? watcher.update() : null)
-//   }
-// }
-
-// class Observer {
-//   constructor (vm, expr, value, cb) {
-//     this.vm = vm
-//     this.cb = cb
-//     this.expr = expr
-//     this.value = value
-//   }
-
-//   update () {
-//     console.log(this.expr);
-//     let newValue = this.vm.getValue(this.expr)
-//     console.log(newValue);
-//     let oldValue = this.value
-//     if (newValue != oldValue) {
-//       this.cb(newValue, oldValue)
-//     }
-//     this.value = newValue
-//   }
-// }
-
-// class MVVM {
-//   constructor (options) {
-//     this.$el = document.querySelector(options.el)
-//     this.$data = options.data
-//     if (this.$el) {
-//       // 数据代理把对象的所有属性改成set和get
-//       this.proxy(this.$data)
-//       // 渲染数据和元素
-//       this.compile(this.$el)
-//     }
-//   }
-
-//   proxy (data) {
-//     let self = this
-//     if (!data || typeof data !== 'object') return
-//     Object.keys(data).forEach(key => {
-//       let val = data[key]
-//       let sub = new Subject()
-//       // 代理
-//       Object.defineProperty(data, key, {
-//         get () {
-//           self.currentObserver && sub.subscribe(self.currentObserver)
-//           return val
-//         },
-//         set (newVal) {
-//           val = newVal
-//           // 通知所有人数据更新了
-//           sub.notify()
-//         }
-//       })
-//       // 深度递归代理
-//       this.proxy(val)
-//     })
-//   }
-
-//   compile (node) {
-//     let self = this
-//     if (node.nodeType === 1) {
-//       node.childNodes.forEach(childNode => {
-//         this.compile(childNode)
-//       })
-//     } else if (node.nodeType === 3) { //文本
-//       let reg = /{{(.+?)}}/g
-//       let match
-//       while (match = reg.exec(node.nodeValue)) {
-//         let raw = match[0]
-//         let key = match[1].trim()
-//         console.log(key,raw,node.nodeValue);
-//         self.currentObserver = new Observer(this, key, raw, (val, oldVal) => {
-//           node.nodeValue = node.nodeValue.replace(oldVal, val)
-//         })
-//         self.currentObserver.update()
-//         self.currentObserver = null
-//       }
-//     }
-//   }
-
-//   getValue (expr) {
-//     expr = expr.split('.')
-//     return expr.reduce((prev, next) => {
-//       return prev[next]
-//     }, this.$data)
-//   }
-// }
-
-// let vm = new MVVM({
-//   el: '#app',
-//   data: {
-//     age: {
-//       a:1
-//     }
-//   }
-// })
-
-// setInterval(() => {
-//   vm.$data.age.a = vm.$data.age.a + 1
-// }, 1000)
-
-</script>
 </html>
