[fix]数据直接更新时的一个bug|v-if初步完成

--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -9,9 +9,9 @@
 <body>
   <div id="app">
     <div class="ageContent" v-if="isShow" v-fuck="233" :a="test">
-      小明的1年龄是{{age}}
+      小明的年龄是{{age}}
     </div>
-
+    测试
   </div>
   
 </body>
