[fix]v-if some bugs

--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -8,10 +8,11 @@
 </head>
 <body>
   <div id="app">
+    测试位置1
     <div class="ageContent" v-if="isShow" v-fuck="233" :a="test">
       小明的年龄是{{age}}
     </div>
-    测试
+    测试位置2
   </div>
   
 </body>
