--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="app">
-    <div class="ageContent"  >
+    <div class="ageContent" v-if="isShow" >
       {{name}}的年龄是{{age}}
     </div>
   </div>
