--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -10,7 +10,7 @@
   <div id="app">
     <div class="ageContent" v-if="isShow" >
       {{name}}的年龄是{{age}}
-      <myComponent>233</myComponent>
+      <coma></coma>
     </div>
   </div>
   
