--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="app">
-    <div class="ageContent" v-if="isShow" >
+    <div class="ageContent" v-if="isShow" v-bind="233">
       {{name}}的年龄是{{age}}
       <coma></coma>
     </div>
