完成子节点属性绑定

--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div id="app">
-    <div class="ageContent" v-if="isShow" v-bind="233">
+    <div class="ageContent" >
       {{name}}的年龄是{{age}}
-      <coma></coma>
+      <coma v-if="isShow"></coma>
     </div>
   </div>
   
