--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -10,7 +10,7 @@
   <div id="app">
     <div class="ageContent" >
       {{name}}的年龄是{{age}}
-      <coma v-if="isShow"></coma> 
+      <coma v-if="isShow" v-on:click="ass" v-bind:comAttr="comAttr"></coma> 
   </div>
   
 </body>
