添加v-on逻辑，但目前只能用于根实例

--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -10,7 +10,8 @@
   <div id="app">
     <div class="ageContent" >
       {{name}}的年龄是{{age}}
-      <coma v-if="isShow" v-on:click="ass"></coma> 
+      <button v-on:click="addFunc">年龄++</button>
+      <coma v-if="isShow" ></coma> 
   </div>
   
 </body>
