[update]readme.md|other unimportance

--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -11,7 +11,7 @@
     <div class="ageContent" >
       {{name}}的年龄是{{age}}
       <button v-on:click="addFunc">年龄++</button>
-      <coma v-if="isShow" ></coma> 
+      <coma v-if="isShow"  v-on:click="addFunc"></coma> 
   </div>
   
 </body>
