重构observe前的最后一次备份

--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -9,9 +9,11 @@
 <body>
   <div id="app">
     <div class="ageContent" >
-      {{name}}的年龄是{{age}}
+      <p>
+        {{name}}的年龄是{{age}}
+      </p>
       <button v-on:click="addFunc">年龄++</button>
-      <coma v-if="isShow"  v-on:click="addFunc"></coma> 
+      <coma v-if="isShow"></coma> 
   </div>
   
 </body>
