--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -12,6 +12,7 @@
       <p>
         {{name}}的年龄是{{age}}
       </p>
+      {{arr}}
       <button v-on:click="addFunc">年龄++</button>
       <coma v-if="isShow"></coma> 
   </div>
