重构observe使其可以侦测数组，且数组侦测支持下标

--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -13,6 +13,7 @@
         {{name}}的年龄是{{age}}
       </p>
       {{arr}}
+      {{arr[0]}}
       <button v-on:click="addFunc">年龄++</button>
       <coma v-if="isShow"></coma> 
   </div>
