修复重构之后textComplier的bug

--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -13,8 +13,8 @@
         {{name}}的年龄是{{age}}
       </p>
       {{arr}}
-      {{arr[0]}}
-      <button v-on:click="addFunc">年龄++</button>
+   
+      <button v-on:click="addFunc">addFunc</button>
       <coma v-if="isShow"></coma> 
   </div>
   
