--- a/config/indexTemplate.html
+++ b/config/indexTemplate.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <div id="app">
-    <div class="ageContent" >
+    <div class="ageContent">
       <p>
         {{name}}的年龄是{{age}}
       </p>
-      {{arr}}
-   
+
+      <ul>
+        <li v-for="item in arr">
+          {{item}}
+        </li>
+      </ul>
+
+
       <button v-on:click="addFunc">addFunc</button>
-      <coma v-if="isShow"></coma> 
-  </div>
-  
+      <coma v-if="isShow"></coma>
+    </div>
+
 </body>
+
 </html>
